[package]
name = "big_data_architecture_advisor"
version = "0.1.0"
edition = "2021"
authors = ["Marcin Bielak <marcin.bieli+BigDataArchitectureAdvisor@gmail.com>"]
description = "Rule-based expert system for Big Data architecture decisions with observability and dynamic scoring."
license = "MIT"
repository = "https://github.com/bieli/big_data_architecture_advisor"

[dependencies]
crepe = "0.1"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
